--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-register": "^6.22.0",
     "bulma": "^0.3.1",
     "chalk": "^1.1.3",
+    "compression-webpack-plugin": "^0.3.2",
     "connect-history-api-fallback": "^1.3.0",
     "css-loader": "^0.26.1",
     "eventsource-polyfill": "^0.9.6",
