--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
-    "vue": "^2.1.10"
+    "vue": "^2.1.10",
+    "vuedraggable": "^2.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
